# eventline

./: .gitignore  README.md  codex-eventline.config.toml  index.html  mcp_server.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
data/: events.jsonl
src/: App.tsx  styles.css
tests/: analyze_codex_eventline_trace.py  codex-eventline-prompt.md  run_codex_eventline_test.sh
