[project]
name = "eventline"
version = "0.1.0"
description = "Event line graph tools for agentic systems through MCP."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "mcp>=1.9.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_server"]
